vvvvvvvvvvv.log

------ Building 23 action(s) started ------
[1/23] Resource Default.rc2
[2/23] Resource Default.rc2
[3/23] Compile [x64] SharedPCH.UnrealEd.Project.ValApi.ValExpApi.Cpp20.InclOrderUnreal5_3.cpp
[4/23] Compile [x64] MyClass.cpp
[5/23] Compile [x64] PerModuleInline.gen.cpp
[6/23] Compile [x64] vvvvvvvvvvv.cpp
[7/23] Compile [x64] BlueprintProfilerCommands.cpp
[8/23] Link [x64] UnrealEditor-vvvvvvvvvvv.lib
  ????????C:/Users/xiaonan/Documents/Unreal Projects/vvvvvvvvvvv/Intermediate/Build/Win64/x64/UnrealEditor/Development/vvvvvvvvvvv/UnrealEditor-vvvvvvvvvvv.lib ?Ͷ??C:/Users/xiaonan/Documents/Unreal Projects/vvvvvvvvvvv/Intermediate/Build/Win64/x64/UnrealEditor/Development/vvvvvvvvvvv/UnrealEditor-vvvvvvvvvvv.exp
[9/23] Compile [x64] MemoryAnalyzerTest.cpp
[10/23] Compile [x64] Module.BlueprintProfiler.cpp
[11/23] Compile [x64] RuntimeProfilerTest.cpp
[12/23] Compile [x64] DashboardUITest.cpp
[13/23] Compile [x64] BlueprintProfilerStyle.cpp
[14/23] Link [x64] UnrealEditor-vvvvvvvvvvv.dll
[15/23] Compile [x64] StaticLinterBatchTest.cpp
[16/23] Compile [x64] BlueprintProfiler.cpp
[17/23] Compile [x64] MemoryAnalyzer.cpp
[18/23] Compile [x64] SBlueprintProfilerWidget.cpp
C:\Users\xiaonan\Documents\Unreal Projects\vvvvvvvvvvv\Plugins\BlueprintProfiler\Source\BlueprintProfiler\Private\UI\SBlueprintProfilerWidget.cpp(2197,39): error C2039: "FindNodeByGUID": ??? "FBlueprintEditorUtils" ?ĳ??
		TargetNode = FBlueprintEditorUtils::FindNodeByGUID(BP, Item->NodeGuid);
		                                    ^
E:\UE\UE_5.6\Engine\Source\Editor\UnrealEd\Public\Kismet2\BlueprintEditorUtils.h(140,7): note: ?μ?BlueprintEditorUtils??????
class FBlueprintEditorUtils
      ^
C:\Users\xiaonan\Documents\Unreal Projects\vvvvvvvvvvv\Plugins\BlueprintProfiler\Source\BlueprintProfiler\Private\UI\SBlueprintProfilerWidget.cpp(2197,39): error C3861: ??FindNodeByGUID??: ??????????
		TargetNode = FBlueprintEditorUtils::FindNodeByGUID(BP, Item->NodeGuid);
		                                    ^
C:\Users\xiaonan\Documents\Unreal Projects\vvvvvvvvvvv\Plugins\BlueprintProfiler\Source\BlueprintProfiler\Private\UI\SBlueprintProfilerWidget.cpp(2205,27): error C2039: "BringKismetToFocusOnObject": ??? "FKismetEditorUtilities" ?ĳ??
		FKismetEditorUtilities::BringKismetToFocusOnObject(TargetNode);
		                        ^
E:\UE\UE_5.6\Engine\Source\Editor\UnrealEd\Public\Kismet2\KismetEditorUtilities.h(70,7): note: ?μ?KismetEditorUtilities??????
class FKismetEditorUtilities
      ^
C:\Users\xiaonan\Documents\Unreal Projects\vvvvvvvvvvv\Plugins\BlueprintProfiler\Source\BlueprintProfiler\Private\UI\SBlueprintProfilerWidget.cpp(2205,27): error C3861: ??BringKismetToFocusOnObject??: ??????????
		FKismetEditorUtilities::BringKismetToFocusOnObject(TargetNode);
		                        ^
[19/23] Compile [x64] StaticLinter.cpp
[20/23] Compile [x64] RuntimeProfiler.cpp
E:\UE\UE_5.6\Engine\Source\Runtime\Core\Public\Stats\Stats2.h(7): warning C4996: All definitions have been moved to Stats.h, please use that instead. Please update your code to the new API before upgrading to the next release, otherwise your project will no longer compile.
Trace written to file C:/Users/xiaonan/AppData/Local/UnrealBuildTool/Log.uba with size 10.2kb
Total time in Unreal Build Accelerator local executor: 28.66 seconds

Result: Failed (OtherCompilationError)
Total execution time: 33.47 seconds
LogInit: Warning: Still incompatible or missing module: vvvvvvvvvvv
LogInit: Warning: Still incompatible or missing module: BlueprintProfiler
LogCore: Engine exit requested (reason: EngineExit() was called)
LogAudio: Display: Beginning Audio Device Manager Shutdown (Module: )...
LogAudio: Display: Audio Device Manager Shutdown
LogExit: Preparing to exit.
LogXGEController: Cannot use XGE Controller as Incredibuild is not installed on this machine.
LogXGEController: Cleaning working directory: C:/Users/xiaonan/AppData/Local/Temp/UnrealXGEWorkingDir/
LogPakFile: Destroying PakPlatformFile
LogExit: Exiting.
Log file closed, 02/05/26 19:54:17
